[gd_scene load_steps=6 format=3 uid="uid://ci7u5r1qc0aob"]

[ext_resource type="Script" path="res://addons/ez_tiles/ez_tiles_dock.gd" id="1_xlstp"]
[ext_resource type="Script" path="res://addons/ez_tiles/load_files_button.gd" id="2_8dh4w"]
[ext_resource type="PackedScene" uid="uid://1u5mrsioaaon" path="res://addons/ez_tiles/images_container.tscn" id="3_vxumx"]

[sub_resource type="LabelSettings" id="LabelSettings_2svd6"]
font_color = Color(0.619608, 0.619608, 0.619608, 1)

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_fl86h"]
bg_color = Color(0.12549, 0.145098, 0.172549, 1)

[node name="EZTilesDock" type="HBoxContainer"]
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("1_xlstp")

[node name="VBoxContainer" type="VBoxContainer" parent="."]
layout_mode = 2

[node name="HBoxContainer" type="HBoxContainer" parent="VBoxContainer"]
custom_minimum_size = Vector2(0, 40)
layout_mode = 2

[node name="LoadFilesButton" type="Button" parent="VBoxContainer/HBoxContainer"]
layout_mode = 2
size_flags_horizontal = 0
text = "Import Images"
script = ExtResource("2_8dh4w")

[node name="ImagesContainer" parent="VBoxContainer" instance=ExtResource("3_vxumx")]
layout_mode = 2

[node name="VBoxContainer2" type="VBoxContainer" parent="."]
layout_mode = 2
size_flags_horizontal = 3

[node name="HBoxContainer" type="HBoxContainer" parent="VBoxContainer2"]
custom_minimum_size = Vector2(0, 40)
layout_mode = 2

[node name="Label" type="Label" parent="VBoxContainer2/HBoxContainer"]
layout_mode = 2
tooltip_text = "The tile size is determined automatically from the first image you import. As you can see in  the template below, EZ Tiles expects a 6 by 4 grid; the tiles do not have to be square."
mouse_filter = 0
text = "Tile Size* "
label_settings = SubResource("LabelSettings_2svd6")

[node name="XSizeLineEdit" type="LineEdit" parent="VBoxContainer2/HBoxContainer"]
layout_mode = 2
placeholder_text = "x"
editable = false

[node name="YSizeLineEdit" type="LineEdit" parent="VBoxContainer2/HBoxContainer"]
layout_mode = 2
placeholder_text = "y"
editable = false

[node name="PanelContainer" type="PanelContainer" parent="VBoxContainer2"]
layout_mode = 2
size_flags_horizontal = 3
size_flags_vertical = 3
theme_override_styles/panel = SubResource("StyleBoxFlat_fl86h")

[connection signal="load_files" from="VBoxContainer/HBoxContainer/LoadFilesButton" to="." method="_on_file_menu_load_files"]
[connection signal="pressed" from="VBoxContainer/HBoxContainer/LoadFilesButton" to="VBoxContainer/HBoxContainer/LoadFilesButton" method="_on_pressed"]
[connection signal="drop_files" from="VBoxContainer/ImagesContainer" to="." method="_on_images_container_drop_files"]
[connection signal="terrain_list_entry_removed" from="VBoxContainer/ImagesContainer" to="." method="_on_images_container_terrain_list_entry_removed"]
